k8s/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
     labels:
       app: auth
    spec:
      containers:
        - image: europe-central2-docker.pkg.dev/tough-bearing-390810/real-time-chat/auth:01
          name: auth
          ports:
            - containerPort: 8080
        - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL Auth Proxy
        # Make sure to update on a regular schedule!
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          args:
          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "--private-ip"


          # Replace DB_PORT with the port the proxy should listen on
          - "--port=5432"
          - "tough-bearing-390810:europe-central2:real-chat"

        # [START cloud_sql_proxy_k8s_volume_mount]
          # This flag specifies where the service account key can be found
          - "--credentials-file=/secrets/service_account.json"
          securityContext:
          # The default Cloud SQL Auth Proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
          volumeMounts:
          - name: sa-volume
            mountPath: /secrets/
            readOnly: true

          resources:
            requests:
            # The proxy's memory use scales linearly with the number of active
            # connections. Fewer open connections will use less memory. Adjust
            # this value based on your application's requirements.
              memory: "2Gi"
            # The proxy's CPU use scales linearly with the amount of IO between
            # the database and the application. Adjust this value based on your
            # application's requirements.
              cpu:    "1"
          # [END cloud_sql_proxy_k8s_volume_mount]
        # Resource configuration depends on an application's requirements. You
        # should adjust the following values based on what your application
        # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
      # [START cloud_sql_proxy_k8s_volume_secret]
      volumes:
      - name: sa-volume
        secret:
          secretName: sa-secret
      # [END cloud_sql_proxy_k8s_volume_secret]
